--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Chatty</string>
-    <string name="settings_name" translatable="false">AppRTC Settings</string>
+    <string name="settings_name" translatable="false">Chatty Settings</string>
     <string name="disconnect_call">Disconnect Call</string>
     <string name="room_description">
         Please enter a room name. Room names are shared with everyone, so think
@@ -51,7 +51,7 @@
 
     <string name="pref_resolution_key">resolution_preference</string>
     <string name="pref_resolution_title">Video resolution.</string>
-    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
+    <string name="pref_resolution_dlg">Enter webRTC local video resolution.</string>
     <string name="pref_resolution_default">Default</string>
 
     <string name="pref_fps_key">fps_preference</string>
