--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Chatty</string>
+    <string name="app_name" translatable="false">Digi Talk</string>
     <string name="settings_name" translatable="false">Chatty Settings</string>
     <string name="disconnect_call">Disconnect Call</string>
     <string name="room_description">
